# portfolio-project

./: .gitignore  AGENTS.md  README.md  pyproject.toml  streamlit_app.py
.githooks/: pre-commit
.github/workflows/: ci.yml
.streamlit/: pages.toml
docs/: .env.sample  Architecture.md  Archtecture.md  Dashboard.md  Decisions.md  Metrics.md  Pipelines.md  Reliability.md  Sources.md
docs/data-dictionaries/: Bronze.md  Gold.md  Observability.md  README.md  Ref.md  Silver.md
pages/: Deep_Dive.py  Observability.py  The_Lab.py
queries/: momentum_12_1.sql  pct_below_52w_high.sql  silver_news_parquet_view.sql  silver_prices_parquet_view.sql  silver_wikipedia_pageviews_parquet_view.sql
queries/view_defs/: silver_factors_parquet_view.sql
scripts/: backfill_portfolio_adjusted_close.py  install-git-hooks.ps1  run-dagster-dev.ps1
src/portfolio_project/: bootstrap.py  definitions.py
src/portfolio_project/components/: __init__.py  notification_center.py
src/portfolio_project/components/hover_bar/: __init__.py
src/portfolio_project/config/: __init__.py  investment_strategies.yaml  simulation_reference.yaml
src/portfolio_project/defs/: alpaca_resource.py  bronze_assets.py  data_quality.py  demo_seed_assets.py  duckdb_resource.py  gold_activity.py  gold_news_assets.py  gold_prices.py  run_log.py  silver_assets.py  silver_news_assets.py  silver_prices.py  silver_prices_compact.py  silver_wikipedia_pageviews.py  sp500_assets.py  tranco_assets.py  wikipedia_pageviews.py  yahoo_news_assets.py
src/portfolio_project/defs/portfolio_db/: __init__.py
src/portfolio_project/defs/research_db/: __init__.py  dq_checks.py
src/portfolio_project/defs/resources/: __init__.py  alpaca.py  duckdb.py  env.py  (+1 more)
testing_scripts/: test_alpaca_resource.py  test_duckdb_resource.py
tests/: test_bootstrap.py  test_bronze_research_prices.py  test_definitions_schedule.py  test_demo_seed_assets.py  test_duckdb_resource_locking.py  test_email_alerts.py  test_fama_french_bronze.py  test_fama_french_silver.py  test_multi_duckdb_writer_job.py  test_research_corporate_actions.py  test_research_gold_strategy_tables.py  test_research_ref_simulation_tables.py  test_research_signals.py  test_research_silver_prices.py  test_research_strategy_tables.py  test_research_universe.py  test_run_log_helpers.py  test_smoke_pipeline.py
(+55 files in other folders)
