[project]
name = "portfolio_project"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.2",
    "alpaca-py>=0.17.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "pyarrow>=23.0.0",
    "duckdb>=0.10.0",
    "lxml>=6.0.2",
    "streamlit>=1.31.0",
    "altair>=5.0.0",
    "transformers>=4.38.0",
    "torch>=2.1.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "portfolio_project"
registry_modules = [
    "portfolio_project.components.*",
]


