[project]
name = "portfolio_project"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.2",
    "alpaca-py>=0.17.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "pyarrow>=23.0.0",
    "duckdb>=0.10.0",
    "lxml>=6.0.2",
    "streamlit>=1.31.0",
    "altair>=5.0.0",
    "plotly>=5.19.0",
    "streamlit-plotly-events>=0.0.6",
    "transformers>=4.38.0",
    "torch>=2.1.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "portfolio_project"
registry_modules = [
    "portfolio_project.components.*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
check_untyped_defs = false
files = [
    "src/portfolio_project/definitions.py",
    "src/portfolio_project/defs/run_log.py",
    "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "smoke: pipeline smoke tests that run a tiny fixture dataset",
]


